manifests/app/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tr-deployment
  namespace: tr
  labels:
    name: tr
    app: tr
spec:
  replicas: 3
  selector:
    matchLabels:
      name: tr
  template:
    metadata:
      labels:
        name: tr
        app: tr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: tr
        image: kainlite/tr:master
        ports:
        - containerPort: 4000
        securityContext:
          allowPrivilegeEscalation: false
        imagePullPolicy: Always
