manifests/app/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tr
  namespace: tr
spec:
  selector:
    name: tr
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: tr-cluster-svc
  namespace: tr
  labels:
    name: tr
    app: tr
spec:
  clusterIP: None
  selector:
    name: tr
