manifests/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tr-ingress
  namespace: tr
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # handy to disable for the acme initial validation
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    use-proxy-protocol: "true"
spec:
  tls:
  - hosts:
      - tr.techsquad.rocks
    secretName: tr-prod-tls
  # ingressClassName: nginx
  rules:
  - host: tr.techsquad.rocks
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tr
            port:
              number: 4000
